@@ -94,15 +94,7 @@
 #define __MSDOS__ 1
 #endif
 
-#if defined(__WIN32__) && !defined(__CYGWIN__) /* Windows */
-#define __MSDOS__ 1
-#endif
-
-#if defined(__TURBOC__) && !defined(__MSDOS__) /* Borland C */
-#define __MSDOS__ 1
-#endif
-
-#if defined(ENABLE_NLS) || (defined(D2U_UNICODE) && !defined(__MSDOS__))
+#if defined(ENABLE_NLS) || (defined(D2U_UNICODE) && !defined(__MSDOS__) && !defined(__WIN32__))
 /* setlocale() is also needed for nl_langinfo() */
 #include <locale.h>
 #endif
@@ -124,25 +116,25 @@
 #undef S_ISLNK
 #endif
 
-#if defined(__MSDOS__) || defined(__OS2__)
+#if defined(__MSDOS__) || defined(__WIN32__) || defined(__OS2__)
 /* Systems without soft links use 'stat' instead of 'lstat'. */
 #define STAT stat
 #else
 #define STAT lstat
 #endif
 
-#if defined(__MSDOS__) || defined(__OS2__)
+#if defined(__MSDOS__) || defined(__WIN32__) || defined(__OS2__)
 /* On some systems rename() will always fail if target file already exists. */
 #define NEED_REMOVE 1
 #endif
 
-#if defined(__MSDOS__) || defined(__CYGWIN__) || defined(__OS2__) /* DJGPP, MINGW32 and OS/2 */
+#if defined(__MSDOS__) || defined(__WIN32__) || defined(__CYGWIN__) || defined(__OS2__) /* DJGPP, MINGW32 and OS/2 */
 /* required for setmode() and O_BINARY */
 #include <fcntl.h>
 #include <io.h>
 #endif
 
-#if defined(__MSDOS__) || defined(__CYGWIN__) || defined(__OS2__)
+#if defined(__MSDOS__) || defined(__WIN32__) || defined(__CYGWIN__) || defined(__OS2__)
   #define R_CNTRL   "rb"
   #define W_CNTRL   "wb"
 #else
